# outages_reminder

./: pyproject.toml
outage_reminder/: __main__.py  cli.py  client.py  datetime_utils.py  parser.py  types.py
tests/: test_datetime_utils.py  test_parser.py
